src/objects/BLP_Training_Path__c.object
<CustomObject>
    <fields>
        <fullName>BLP_Completed__c</fullName>
        <label>Completed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLP_Mandatory__c</fullName>
        <label>Mandatory</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Paths</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training Path</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Paths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>